k8s/istio/istio-tools/devops-tools-ns.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: devops-tools
  labels:
    istio-injection : enabled
