k8s/istio/istio-tools/istio-tools-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kiali-vs
  namespace: istio-system
spec:
  hosts:
  - 'kiali.clrslate.local'
  gateways:
  - devops-tools/env-gateway
  http:
  - route:
    - destination:
        host: kiali
        port:
          number: 20001
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: grafana-vs
  namespace: istio-system
spec:
  hosts:
  - 'grafana.clrslate.local'
  gateways:
  - devops-tools/env-gateway
  http:
  - route:
    - destination:
        host: grafana
        port:
          number: 3000
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus-vs
  namespace: istio-system
spec:
  hosts:
  - 'prometheus.clrslate.local'
  gateways:
  - devops-tools/env-gateway
  http:
  - route:
    - destination:
        host: prometheus
        port:
          number: 9090
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jaeger-vs
  namespace: istio-system
spec:
  hosts:
  - 'jaeger.clrslate.local'
  gateways:
  - devops-tools/env-gateway
  http:
  - route:
    - destination:
        host: tracing
        port:
          number: 80
---
